Bug 56541 - Sony VAIO VPCZ23A4R: Oops or panic on radeon in error path
Summary: Sony VAIO VPCZ23A4R: Oops or panic on radeon in error path
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-12 15:49 UTC by Alexander Patrakov
Modified: 2013-04-13 07:43 UTC (History)
1 user (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Dmesg from 3.9-rc5 (90.00 KB, text/plain)
2013-04-12 15:49 UTC, Alexander Patrakov
Details
Possible fix (1.04 KB, patch)
2013-04-12 23:19 UTC, Alex Deucher
Details | Diff

Description Alexander Patrakov 2013-04-12 15:49:03 UTC
Created attachment 98431 [details]
Dmesg from 3.9-rc5

This is a fork of bug #56501 and bug #55611. A separate bug is needed because a
decision was made to limit these two bugs to non-rescanning of the PCI bus.
Feel free, however, to refer to any relevant files (e.g. kernel configs and
DSDT dump) or comments attached to these bugs.

Due to yet another bug (#56531), the kernel fails to assign PCI resources to the radeon card in the dock station. As you can see from the attached dmesg, it causes an oops or even a panic in the radeon driver, among other bad things. Please fix the radeon driver so that it doesn't dereference a kernel NULL pointer even when given bad PCI resources.
Comment 1 Alex Deucher 2013-04-12 23:19:38 UTC
Created attachment 98461 [details]
Possible fix

This should fix the issue.
Comment 2 Alexander Patrakov 2013-04-13 07:43:18 UTC
Yes, the issue is fixed. Thanks!

Note You need to log in before you can comment on or make changes to this bug.